# c-c-

./: CMakeLists.txt  Pyramid.c  Pyramid.h  alternames.c  alternames.h  bad_count.c  c1c2.h  double_right.h  escape.h  for_0.h  for_ascii_reverse_order.c  for_complicated.h  for_e.c  for_e.h  for_nesting.h  judge_char_and_nonchar.c  judge_char_and_nonchar.h  main.c  new_c.c  new_c.h  praisel.c  prasise2.c  prasise2.h  print_char.h  print_firname_and_lastname.c  print_firname_and_lastname.h  print_long.h  shoes1.c  showf_pt.h  square_as.c  square_as.h  talk_back.c  toobig.c  toobig.h  type_size.c
review/: &操作.c  &操作.h  arr_pointer.c  arr_pointer.h  change_variety.c  change_variety.h  exchange.c  exchange.h  find_max_medium_small.c  find_max_medium_small.h  larger_of.c  larger_of.h  param_3.c  param_3.h  pointer.c  pointer.h  some_heads_definition.c  some_heads_definition.h  两数的调和平均数.c  两数的调和平均数.h  遍历2维数组.c  遍历2维数组.h
str_strmethod/: address.c  address.h  get_str.c  get_str.h  give_a_arr.c  give_a_arr.h  str_prt.c  str_prt.h  strings1.c  strings1.h  指针创建字符串.c  指针创建字符串.h  数组创建字符串.c  数组创建字符串.h
指针/: 解引用.c
指针/烦死了/: po_0.h  pointer_a.c  pointer_a.h  pp.c  pp.h  sum_arr1.c  sum_arr1.h  sum_arr2.c  sum_arr2.h
指针/练习题/: params.c  params.h
指针/重新学/: search&.c  search&.h
数组/一维/: arr_declare.c  arr_declare.h  arr_e.c  arr_e.h  arr_give_value.c  arr_give_value.h  day_mon1.c  day_mon1.h  day_mon2.c  day_mon2.h
数组/二维/: rain.c  rain.h  遍历一个二维数组.c  遍历一个二维数组.h
第9章，7，8章学了个寂寞/: locheck.c  locheck.h
第9章，7，8章学了个寂寞/9.11/: 1char_3int.c  1char_3int.h  average_two.c  average_two.h  chline.c  chline.h  double_3.c  double_3.h  larger_double.c  larger_double.h  min.c  min.h
第七章以前的题/: 123.c  123.h  bad_count.h  basic.c  basic.h  c1c2.c  cypher1.c  cypher1.h  double_right.c  escape.c  float_err.c  float_err.h  for_0.c  for_ascii_reverse_order.h  for_complicated.c  for_nesting.c  for_order.c  for_order.h  is_lower.c  is_lower.h  judge_char_and_nonchar.c  main.c  one_three.c  one_three.h  pizza.c  pizza.h  pra_iso646.c  pra_iso646.h  praisel.h  print_char.c  print_long.c  print_operate.c  print_operate.h  shoes1.h  showf_pt.c  talk_back.h  transfer_long.c  transfer_long.h  type_size.h  varwide.c  (+5 more)
第七章复习题/: 7_0.c  7_0.h  echo.c  echo.h  recur.c  recur.h  recur_1.c  recur_1.h
