cmake_minimum_required(VERSION 3.20)
project(c_exe C)

set(CMAKE_C_STANDARD 99)

#add_executable(c_exe main.c square_as.c)
#add_executable(c_exe 123.c)
#add_executable(c_exe basic.c)
#add_executable(c_exe toobig.c)
#add_executable(c_exe print_long.c)
#add_executable(c_exe print_char.c)
#add_executable(c_exe alternames.c)
#add_executable(c_exe showf_pt.c)
#add_executable(c_exe float_err.c)
#add_executable(c_exe type_size.c)
#add_executable(c_exe bad_count.c)
#add_executable(c_exe escape.c)
#add_executable(c_exe talk_back.c)
#add_executable(c_exe praisel.c )
#add_executable(c_exe prasise2.c)
add_executable(c_exe pizza.c)
