cmake_minimum_required(VERSION 3.20)
project(c_exe C)

set(CMAKE_C_STANDARD 99)

#add_executable(c_exe main.c square_as.c)
#add_executable(c_exe 123.c)
#add_executable(c_exe basic.c)
#add_executable(c_exe toobig.c)
#add_executable(c_exe print_long.c)
#add_executable(c_exe print_char.c)
#add_executable(c_exe alternames.c)
#add_executable(c_exe showf_pt.c)
#add_executable(c_exe float_err.c)
#add_executable(c_exe type_size.c)
#add_executable(c_exe bad_count.c)
#add_executable(c_exe escape.c)
#add_executable(c_exe talk_back.c)
#add_executable(c_exe praisel.c )
#add_executable(c_exe prasise2.c)
#add_executable(c_exe pizza.c)
#add_executable(c_exe varwide.c )
#add_executable(c_exe print_firname_and_lastname.c)
#add_executable(c_exe print_operate.c)
#add_executable(c_exe while.c )
#add_executable(c_exe for_e.c)
#add_executable(c_exe for_0.c)
#add_executable(c_exe double_right.c)
#add_executable(c_exe transfer_long.c)
#add_executable(c_exe for_complicated.c )
#add_executable(c_exe judge_char_and_nonchar.c)
#add_executable(c_exe for_nesting.c )
#add_executable(c_exe for_ascii_reverse_order.c)
#add_executable(c_exe for_order.c )
#add_executable(c_exe Pyramid.c )
#add_executable(c_exe shoes1.c )
#add_executable(c_exe c1c2.c )
#add_executable(c_exe cypher1.c )
#add_executable(c_exe pra_iso646.c)
#add_executable(c_exe is_lower.c)
#add_executable(c_exe 第七章以前的题/条件运算符.c)
#add_executable(c_exe 第七章复习题/7_0.c)
#add_executable(c_exe 第七章复习题/echo.c)
#add_executable(c_exe 第七章复习题/recur.c)
#add_executable(c_exe 第七章复习题/recur_1.c)
add_executable(c_exe 第9章，7，8章学了个寂寞/locheck.c)