cmake_minimum_required(VERSION 3.20)
project(c_exe C)

set(CMAKE_C_STANDARD 99)

#add_executable(c_exe main.c square_as.c)
#add_executable(c_exe 123.c)
#add_executable(c_exe basic.c)
#add_executable(c_exe toobig.c)
#add_executable(c_exe print_long.c)
#add_executable(c_exe print_char.c)
#add_executable(c_exe alternames.c)
#add_executable(c_exe showf_pt.c)
#add_executable(c_exe float_err.c)
#add_executable(c_exe type_size.c)
#add_executable(c_exe bad_count.c)
#add_executable(c_exe escape.c)
#add_executable(c_exe talk_back.c)
#add_executable(c_exe praisel.c )
#add_executable(c_exe prasise2.c)
#add_executable(c_exe pizza.c)
#add_executable(c_exe varwide.c )
#add_executable(c_exe print_firname_and_lastname.c)
#add_executable(c_exe print_operate.c)
#add_executable(c_exe while.c )
#add_executable(c_exe for_e.c)
#add_executable(c_exe for_0.c)
#add_executable(c_exe double_right.c)
#add_executable(c_exe transfer_long.c)
#add_executable(c_exe for_complicated.c )
#add_executable(c_exe judge_char_and_nonchar.c)
#add_executable(c_exe for_nesting.c )
#add_executable(c_exe for_ascii_reverse_order.c)
#add_executable(c_exe 第七章以前的题/for_order.c)
#add_executable(c_exe Pyramid.c )
#add_executable(c_exe shoes1.c )
#add_executable(c_exe c1c2.c )
#add_executable(c_exe cypher1.c )
#add_executable(c_exe pra_iso646.c)
#add_executable(c_exe is_lower.c)
#add_executable(c_exe 第七章以前的题/条件运算符.c)
#add_executable(c_exe 第七章复习题/7_0.c)
#add_executable(c_exe 第七章复习题/echo.c)
#add_executable(c_exe 第七章复习题/recur.c)
#add_executable(c_exe 第七章复习题/recur_1.c)
#add_executable(c_exe 第9章，7，8章学了个寂寞/locheck.c
#add_executable(c_exe 指针/解引用.c 指针/练习题/params.c 指针/练习题/params.h)
#add_executable(c_exe 指针/pp.c)
#add_executable(c_exe 第9章，7，8章学了个寂寞/9.11/min.c)
#add_executable(c_exe 第9章，7，8章学了个寂寞/9.11/chline.c)
#add_executable(c_exe 第9章，7，8章学了个寂寞/9.11/1char_3int.c)
#add_executable(c_exe 第9章，7，8章学了个寂寞/9.11/average_two.c)
#add_executable(c_exe 第9章，7，8章学了个寂寞/9.11/larger_double.c)
#add_executable(c_exe 第9章，7，8章学了个寂寞/9.11/double_3.c)
#add_executable(c_exe 数组/arr_e.c)
#add_executable(c_exe 数组/day_mon1.c)
#add_executable(c_exe 数组/day_mon2.c)
#add_executable(c_exe 数组/arr_declare.c)
#add_executable(c_exe 数组/一维/arr_give_value.c)
#add_executable(c_exe 数组/二维/rain.c)
#add_executable(c_exe 数组/二维/遍历一个二维数组.c)
#add_executable(c_exe 指针/pointer_a.c)
#add_executable(c_exe 指针/sum_arr1.c)
#add_executable(c_exe 指针/烦死了/sum_arr2.c)
#add_executable(c_exe 指针/重新学/search&.c)
#add_executable(c_exe review/&操作.c)
#add_executable(c_exe review/exchange_r.c)
#add_executable(c_exe review/exchange.c)
#add_executable(c_exe review/pointer.c)
#add_executable(c_exe review/change_variety.c)
#add_executable(c_exe review/some_heads_definition.c)
#add_executable(c_exe review/param_3.c)
#add_executable(c_exe review/两数的调和平均数.c)
#add_executable(c_exe review/larger_of.c)
#add_executable(c_exe 第9章，7，8章学了个寂寞/9.11/larger_double.c)
#add_executable(c_exe review/find_max_medium_small.c)
#add_executable(c_exe review/遍历2维数组.c)
#add_executable(c_exe review/arr_pointer.c)
#add_executable(c_exe str_strmethod/strings1.c)
#add_executable(c_exe str_strmethod/str_prt.c)
#add_executable(c_exe str_strmethod/get_str.c)
#add_executable(c_exe str_strmethod/指针创建字符串.c)
#add_executable(c_exe str_strmethod/数组创建字符串.c)
#add_executable(c_exe str_strmethod/address.c)
add_executable(c_exe str_strmethod/give_a_arr.c)